# edc-ingestion-platform-feature_branch

./: .dockerignore  .env.example  .env.localstack-full.example  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.localstack-full.yml  docker-compose.yml  make.bat  openapi_spec.json  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_template_baseline.py
docker/sftpgo/: loaddata.json
input_files/: samples_manifest.json
input_files/additional_request/: DOV Only Mapping Example _V2_C1071032_Pfizer Requirements Document_FINAL.xlsx
input_files/additional_request/DofV Only - C6271001/: C6271001 Study Design Specifications_V2.1_07Jan2025.xlsx  Copy of V1_C6271001_Pfizer Requirements Document_21JAN2025.xlsx
input_files/by_study/B1791094/: subjectgrp_B1791094_29Oct2025.csv  subjectvisit_B1791094_29Oct2025.csv
input_files/by_study/C1071005/: C1071005_manual_subjectgroup_template_02Nov2025.csv  subjectgrp_C1071005_06Nov2025_impala.csv
input_files/by_study/C1071006/: subjectgrp_C1071006_06Nov2025.csv  subjectvisit_UAT_RCC_C1071006_01Aug2025.csv  visitschedule_C1071006_06Nov2025.csv
input_files/by_study/C1071032/: C1071032_manual_subjectgroup_template_22Oct2025.csv  subjectgrp_C1071032_29Oct2025.csv
input_files/by_study/C4891026/: subjectgrp_C4891026_06Nov2025.csv  subjectvisit_C4891026_06Nov2025.csv  visitschedule_C4891026_06Nov2025.csv
scripts/: bootstrap_sftpgo_data.py  e2e_sftp_raw_layer.py  generate_openapi.py  localstack_full_export.ps1  localstack_full_export.sh  seed_sponsor.py
seeds/sponsors/sponsor_demo/: mappings.yaml
src/edc_ingestion/: __init__.py  app.py  aws_clients.py  circuit_breaker.py  circuit_breakers.py  column_mapping.py  config.py  database.py  logging_config.py  models.py  raw_layer_preview.py  router.py
terraform/: aws.dev.tfvars.example  aws.prod.tfvars.example  aws.tfvars.example  aws.uat.tfvars.example  local.tfvars.example  main.tf  providers.tf  variables.tf
terraform-modules-main/: .terraform-docs.yml
terraform-modules-main/ecs-service/: README.md  alb.tf  cloudwatch.tf  data.tf  ecs.tf  ecs_task_container_definition.tf  iam.tf  nlb.tf  route53.tf  secrets-manager.tf  security_groups.tf  variables.tf
terraform-modules-main/vpc/: README.md  private.tf  variables.tf
terraform/lambda/: alert_emailer.py
tests/: test_health.py
(+18 files in other folders)
